[package]
name = "rustlab2019"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro@develer.com>"]
edition = "2018"

[dependencies]

[[bin]]
name = "ex1"
path = "src/ex1.rs"

[[bin]]
name = "ex2"
path = "src/ex2.rs"

[[bin]]
name = "ex3"
path = "src/ex3.rs"

[[bin]]
name = "ex4"
path = "src/ex4.rs"

[[bin]]
name = "ex5"
path = "src/ex5.rs"
